--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -25,6 +25,22 @@
     @include vp-1200 {
       height: 58px;
     }
+
+    @include focus {
+      outline: none;
+
+      .accordion__button-icon {
+        background-color: $color-default-blue;
+      }
+
+      .accordion__button-icon::before {
+        background-color: $color-default-blue;
+      }
+
+      .accordion__button-icon::after {
+        background-color: $color-default-white;
+      }
+    }
   }
 
   &__element {
@@ -46,6 +62,18 @@
     padding-bottom: 25px;
     border-bottom: solid 1px rgba(28, 51, 116, 0.2);
     margin-bottom: 0;
+  }
+
+  &__element:hover > &__button > &__button-icon {
+    background-color: $color-default-blue;
+  }
+
+  &__element:hover > &__button > &__button-icon::before {
+    background-color: $color-default-blue;
+  }
+
+  &__element:hover > &__button > &__button-icon::after {
+    background-color: $color-default-white;
   }
 
   &__element.is-active > &__button > &__button-icon {
