--- a/source/sass/blocks/supergames.scss
+++ b/source/sass/blocks/supergames.scss
@@ -36,6 +36,8 @@
 .super-games__info {
   background-color: $color-background-torch-red;
   padding: 85px 78px 80px;
+  display: flex;
+  flex-direction: column;
 
   @include vp-1366 {
     padding: 45px;
@@ -169,8 +171,10 @@
   font-size: 18px;
   line-height: 27px;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: auto;
+  margin-top: auto;
   color: $color-default-white;
+  max-width: 330px;
 
   @include vp-1200 {
     font-size: 12px;
@@ -191,6 +195,8 @@
   border: solid 2px $color-default-white;
   cursor: pointer;
   color: $color-default-white;
+  margin-bottom: 0;
+  margin-top: auto;
 
   @include vp-1200 {
     font-size: 10px;
@@ -204,6 +210,20 @@
 .super-games__button:focus-visible {
   background: $color-default-white;
   outline: none;
-  color: $color-default-blue;
+  color: $color-egyptian-blue;
   cursor: pointer;
+}
+
+.super-games__button:active {
+  color: $color-default-blue;
+}
+
+.super-games__button:disabled {
+  opacity: 0.5;
+}
+
+.super-games__img picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
