--- a/source/sass/blocks/faq-tabs.scss
+++ b/source/sass/blocks/faq-tabs.scss
@@ -7,15 +7,19 @@
   margin: 0 auto;
   padding: 120px 103px 68px;
 
+  @include vp-1366 {
+    padding: 100px 45px 25px;
+  }
+
   @include vp-1200 {
     max-width: 768px;
     margin: 0 auto;
-    padding: 110px 45px 30px;
+    padding: 110px 45px 25px;
   }
 
   @include vp-768 {
     margin: 0 auto;
-    padding: 55px 15px 0;
+    padding: 70px 15px 0;
     height: fit-content;
   }
 }
@@ -70,7 +74,7 @@
     flex-direction: row;
     justify-content: center;
     margin: 0;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     flex-wrap: wrap;
     gap: 8px;
   }
