--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -13,13 +13,13 @@
   position: relative;
 
   @include vp-1200 {
-    padding: 44px 0 44px;
+    padding: 40px 0 45px;
   }
 
   @include vp-768 {
     flex-direction: column;
     align-items: flex-start;
-    padding-bottom: 50px;
+    padding-bottom: 55px;
   }
 }
 
@@ -37,16 +37,20 @@
   gap: 10px;
   margin: 0 auto 0 0;
   padding: 0;
+  padding-left: 8px;
+  padding-bottom: 5px;
 
   @include vp-1200 {
     gap: 0;
+    padding-bottom: 0;
   }
 
   @include vp-768 {
     display: block;
     column-count: 2;
     column-gap: 45px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    padding-left: 0;
   }
 }
 
@@ -101,18 +105,23 @@
 
 .footer__item {
   @include vp-768 {
-    margin-bottom: 18px;
+    margin-bottom: 16px;
   }
 }
 
 .footer__item:first-child {
   @include vp-768 {
-    margin-top: 45px;
+    margin-top: 49px;
   }
 }
 
+
 .footer__item:not(:last-child) {
   margin-right: 30px;
+}
+
+.footer__item:nth-child(3) {
+  padding-top: 8px;
 }
 
 .footer__social-list {
@@ -122,6 +131,12 @@
   align-items: center;
   margin: 0;
   padding: 0;
+  padding-bottom: 10px;
+  padding-right: 1px;
+
+  @include vp-1200 {
+    padding-bottom: 0;
+  }
 }
 
 .footer__social-item {
