--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -6,12 +6,12 @@
   @include vp-1200 {
     max-width: 768px;
     margin: 0 auto;
-    //padding: 0 45px 35px;
+    padding: 0 0 34px;
   }
 
   @include vp-768 {
     width: 100%;
-    max-width: 320px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0;
   }
@@ -20,10 +20,10 @@
 .trainers__wrapper {
   max-width: 1366px;
   margin: 0 auto;
-  padding: 53px 0 90px;
+  padding: 53px 20px 90px;
 
   @include vp-1200 {
-    padding: 0;
+    padding: 0 15px;
   }
 
   @include vp-768 {
@@ -32,17 +32,17 @@
 }
 
 .trainers__container {
-  padding: 0 103px;
+  padding: 0 83px;
   position: relative;
 
   @include vp-1200 {
     max-width: 768px;
     margin: 0 auto;
-    padding: 50px 90px 50px;
+    padding: 50px 85px 50px;
   }
 
   @include vp-768 {
-    padding: 25px 45px 70px;
+    padding: 30px 47px 54px;
   }
 }
 
@@ -65,7 +65,7 @@
   @include vp-768 {
     font-size: 32px;
     letter-spacing: 0.96px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     text-align: center;
   }
 }
@@ -73,10 +73,6 @@
 .trainers__list {
   list-style: none;
   padding: 0;
-
-  @include vp-768 {
-    padding-left: 0;
-  }
 }
 
 .trainers__image {
@@ -84,10 +80,18 @@
 }
 
 .trainers__image picture img {
-  @include vp-768 {
-    max-width: 226px;
-    height: 274px;
+
+  @include vp-1200 {
+    width: 268px;
+    height: 294px;
     object-fit: cover;
+  }
+
+  @include vp-768 {
+    width: 100%;
+    min-width: 226px;
+    height: 273px;
+    object-fit: fill;
   }
 }
 
@@ -100,7 +104,7 @@
   text-align: center;
   margin: 0;
   bottom: 20px;
-  width: 89.9%;
+  width: 100%;
   position: absolute;
 
   @include vp-768 {
@@ -128,7 +132,8 @@
   }
 
   @include vp-768 {
-    width: 226px;
+    width: 100%;
+    height: 100%;
     padding: 35px 25px;
   }
 }
@@ -162,10 +167,10 @@
 }
 
 .trainers__item {
-  margin-right: 10px;
+  margin-right: 0;
 
   @include vp-1200 {
-    margin-right: 0;
+    margin: 0;
   }
 
   &:hover,
@@ -194,17 +199,17 @@
   height: 56px;
   border: solid 1px $color-default-white;
   border-radius: 50%;
-  background-color: $color-default-white;
+  background-color: transparent;
   padding: 0;
 
   @include vp-1200 {
-    top: 59%;
+    top: 55%;
   }
 
   @include vp-768 {
     width: 35px;
     height: 35px;
-    top: 55%;
+    top: 55.5%;
   }
 }
 
@@ -212,17 +217,17 @@
   content: "";
   width: 20px;
   height: 20px;
-  border-top: solid 1px $color-default-blue;
-  border-left: solid 1px $color-default-blue;
+  border-top: solid 1px #afafaf;
+  border-left: solid 1px #afafaf;
   transform: rotate(-45deg);
   position: absolute;
   right: 12px;
 
   @include vp-768 {
-    width: 15px;
-    height: 15px;
+    width: 14px;
+    height: 14px;
     position: absolute;
-    right: 6px;
+    right: 8px;
   }
 }
 
@@ -230,17 +235,17 @@
   content: "";
   width: 20px;
   height: 20px;
-  border-top: solid 1px $color-default-blue;
-  border-left: solid 1px $color-default-blue;
+  border-top: solid 1px #afafaf;
+  border-left: solid 1px #afafaf;
   transform: rotate(135deg);
   position: absolute;
   left: 12px;
 
   @include vp-768 {
-    width: 15px;
-    height: 15px;
+    width: 14px;
+    height: 14px;
     position: absolute;
-    left: 6px;
+    left: 8px;
   }
 }
 
